@@ -17,7 +17,7 @@ module Netzke
 
       # Config options that should not go to the client side
       def server_side_config_options
-        [:lazy_loading, :class_name]
+        [:lazy_loading, :class_name, :components]
       end
 
       def config(*args, &block)
