@@ -1,0 +1,3 @@
+class PanelWithPlugin < Netzke::Base
+  plugin :some_plugin
+end
