@@ -1,5 +1,7 @@
 class SimpleComponent < Netzke::Base
   js_properties :title => "SimpleComponent",
                 :html  => "Inner text"
+
+  # component :one, :class_name => "SimplePanel", :title => "One"
 end
 
